[gd_scene load_steps=4 format=3 uid="uid://b0217ouxef83w"]

[ext_resource type="Texture2D" uid="uid://d1qnftcoxe05h" path="res://assets/sprites/player.png" id="1_qtnr4"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_u1ipc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q711j"]
radius = 15.0
height = 35.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_u1ipc")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_qtnr4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_q711j")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="PowerupTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_powerup_timer_timeout"]
